# pymupdf-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml
app/: main.py
app/api/: routes.py
app/parser/: pdf_parser.py
devops/: Dockerfile
src/: main.py
src/api/: health_router.py  parse.py
src/config/: config.py  injection.py  parser_settings.yaml
src/models/: data_schemas.py
src/parser_lib/: base.py  categories.py  pdf_parser.py
src/services/: pdf_service.py
tests/: test_pymupdf_parser_pdf.py
