[tool.poetry]
name = "pymupdf-service"
version = "0.1.0"
description = ""
authors = ["englader <markoski.stefan@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.25.5"
uvicorn = "^0.34.1"
python-multipart = "^0.0.20"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
